k8s/auth/auth-deployment.yaml
# auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth
    namespace: auth
spec:
    replicas: 2
    selector:
        matchLabels:
            app: auth
    template:
        metadata:
            labels:
                app: auth
        spec:
            affinity:
                nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                        nodeSelectorTerms:
                            - matchExpressions:
                                  - key: node-role.kubernetes.io/cloud-container-g2
                                    operator: In
                                    values:
                                        - "true"
                                  - key: topology.kubernetes.io/zone
                                    operator: In
                                    values:
                                        - bamdad
                                        # - simin
                                        # - foough
                # podAntiAffinity:
                #     requiredDuringSchedulingIgnoredDuringExecution:
                #         - labelSelector:
                #               matchLabels:
                #                   app: auth
                #           topologyKey: topology.kubernetes.io/zone
            containers:
                - name: auth
                  image: saeedsomething/project-auth-service:latest
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 8082
                      - name: grpc
                        containerPort: 50051
                  resources:
                      requests:
                          cpu: "0.5"
                          memory: 1Gi
                      limits:
                          cpu: "0.5"
                          memory: 1Gi
