k8s/auth/auth-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: auth-nodeport
    namespace: auth
spec:
    type: ClusterIP
    selector:
        app: auth
    ports:
        - port: 8082
          targetPort: 8082
          name: http
