k8s/auth/auth-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-auth-to-mysql
    namespace: auth
spec:
    podSelector:
        matchLabels:
            app: mysql
    policyTypes:
        - Ingress
    ingress:
        - from:
              - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: auth # Changed to match the actual namespace label
                podSelector:
                    matchLabels:
                        app: auth
          ports:
              - protocol: TCP
                port: 3306
